--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">GesTurnos!</h1>
+        <h1 class="display-4">WalexNet!</h1>
         <p class="lead">Este es un sistema de gestion de Turnos para pacientes, de cualquier gremio.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="www.walex.net" role="button">Learn more</a>
     </div>
 
     <!-- Optional JavaScript -->
